@@ -124,12 +124,9 @@ public:
         {
             if (currentRide->overall_view.IsNull())
             {
-                int32_t savedPausedState = gGamePaused;
-                gGamePaused = 0;
                 auto gameAction = RideDemolishAction(currentRide->id, RIDE_MODIFY_DEMOLISH);
                 gameAction.SetFlags(GAME_COMMAND_FLAG_ALLOW_DURING_PAUSED);
                 GameActions::Execute(&gameAction);
-                gGamePaused = savedPausedState;
             }
             else
             {
