@@ -294,11 +294,9 @@ public:
         }
         else
         {
-            int32_t previousPauseState = gGamePaused;
-            gGamePaused = 0;
             auto gameAction = RideDemolishAction(currentRide->id, RIDE_MODIFY_DEMOLISH);
+            gameAction.SetFlags(GAME_COMMAND_FLAG_ALLOW_DURING_PAUSED);
             GameActions::Execute(&gameAction);
-            gGamePaused = previousPauseState;
         }
     }
 
